--- a/setup.cfg
+++ b/setup.cfg
@@ -9,11 +9,14 @@ author_email = rbp5354@psu.edu
 license = GPL-3
 classifier =
   Environment :: Web Environment
+  Framework :: Sphinx :: Theme
   Intended Audience :: Developers
   Intended Audience :: System Administrators
   License :: OSI Approved :: GNU General Public License v3 (GPLv3)
   Operating System :: OS Independent
   Programming Language :: Python
+  Programming Language :: Python :: 3
+  Topic :: Documentation
   Topic :: Internet
   Topic :: Software Development :: Documentation
 
@@ -26,7 +29,7 @@ include_package_data = True
 packages = trojanzoo_sphinx_theme
 install_requires =
   sphinx>=4.0.2
-python_requires = >=3.9.6
+python_requires = >3
 
 [options.package_data]
 trojanzoo_sphinx_theme = 
@@ -39,5 +42,5 @@ trojanzoo_sphinx_theme =
   theme_variables.jinja
 
 [options.entry_points]
-console_scripts =
-    sphinx.html_themes = trojanzoo_sphinx_theme:trojanzoo_sphinx_theme
+sphinx.html_themes =
+    trojanzoo_sphinx_theme = trojanzoo_sphinx_theme
