long description in setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,8 @@
 name = trojanzoo_sphinx_theme
 version = attr:trojanzoo_sphinx_theme.__version__
 description = TrojanZoo Sphinx Theme
+long_description = file:README.md
+long_description_content_type = text/markdown
 url = https://github.com/ain-soph/trojanzoo_sphinx_theme
 docs_url = https://github.com/ain-soph/trojanzoo_sphinx_theme
 author = Ren Pang
