--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -20,8 +20,8 @@ jobs:
           pip install --upgrade pip
           pip install -r ./docs/requirements.txt
       - name: Install trojanzoo-sphinx-theme
-        run: |
-          python setup.py install
+        run: |  # python setup.py install
+          pip install .
       - name: Compile Sphinx Docs
         run: |
           cd ./docs/
