--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install requirements
         run: |
           pip install --upgrade pip
-          pip install -r ./docs/requirements.txt
+          pip install -r requirements.txt
       - name: Install trojanzoo-sphinx-theme
         run: |  # python setup.py install
           pip install .
