--- a/trojanzoo_sphinx_theme/theme.conf
+++ b/trojanzoo_sphinx_theme/theme.conf
@@ -1,17 +1,23 @@
 [theme]
 inherit = basic
 stylesheet = css/theme.css
-pygments_style = default
+pygments_style = sphinx
 
 [options]
 canonical_url =
-analytics_id =
 collapse_navigation = False
 sticky_navigation = True
 navigation_depth = 4
 includehidden = True
-titles_only = 
-logo_only =
 display_version = True
 prev_next_buttons_location = bottom
 style_external_links = False
+
+collapsedSections =
+doc_items =
+github_url =
+home_url = /
+
+logo =
+logo_dark =
+logo_icon =
