--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
-    "svg.preview.background": "black",
-    "restructuredtext.confPath": "${workspaceFolder}\\docs\\source"
+    "svg.preview.background": "white",
+    "restructuredtext.confPath": "${workspaceFolder}\\docs\\source",
+    "python.linting.flake8Args": [
+        "--max-line-length=120"
+    ],
+    "python.formatting.autopep8Args": [
+        "--max-line-length=120"
+    ]
 }
