--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,40 @@
+# Configuration Files
+.vs
+.vscode
+.devcontainer
+.idea
+
+# Authorization Secrets
+.ssh
+
+# Not implement
+mypy*
+
+# Temp Files
+.DS_Store
+.dropbox
+
+__pycache__
+*.pyc
 *build/
-*.DS_Store
+.pytest_cache
+.coverage
+coverage.xml
+
+.ipynb_checkpoints
 *.map
 node_modules
 npm-debug.log
 yarn-error.log
 package-lock.json
-__pycache__
-.env.json
-dist/
-*.egg-info/
-scss/vendor/*
+
+/dist
+/*.egg-info
+
+# Filter Directory
+/result
+/output
+# /projects
+
+# test file
+/test.py
