--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = trojanzoo_sphinx_theme
-version = attr:trojanzoo_sphinx_theme.__version__
+version = attr:trojanzoo_sphinx_theme.version.__version__
 description = TrojanZoo Sphinx Theme
 long_description = file:README.md
 long_description_content_type = text/markdown
