--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Install Dependencies
         run: |
           pip install --upgrade pip
+          pip install -r ./docs/requirements.txt
           pip install -e .
       - name: Compile Sphinx Docs
         run: |
