titles_only as default option

--- a/trojanzoo_sphinx_theme/theme.conf
+++ b/trojanzoo_sphinx_theme/theme.conf
@@ -11,6 +11,7 @@ includehidden = True
 display_version = True
 prev_next_buttons_location = bottom
 style_external_links = False
+titles_only = True
 
 github_url =
 home_url = /
