--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -8,11 +8,13 @@ on:
 jobs:
   demo:
     runs-on: ubuntu-latest
-    container:
-      image: python:3.9
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Setup python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
       - name: Install Dependencies
         run: |
           pip install --upgrade pip
