--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,7 @@ zip_safe = False
 include_package_data = True
 packages = trojanzoo_sphinx_theme
 install_requires =
-  sphinx>=4.2.0
+  sphinx>=4.2.0,<5.2.0
   docutils>=0.17.1
 python_requires = >3
 
