update for sphinx 7.0.1

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,8 +30,8 @@ zip_safe = False
 include_package_data = True
 packages = trojanzoo_sphinx_theme
 install_requires =
-  sphinx>=4.2.0,<5.2.0
-  docutils>=0.17.1
+  sphinx
+  docutils
 python_requires = >3
 
 [options.package_data]
