fix jquery dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ packages = trojanzoo_sphinx_theme
 install_requires =
   sphinx
   docutils
+  sphinxcontrib-jquery
 python_requires = >3
 
 [options.package_data]
