--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,7 @@ zip_safe = False
 include_package_data = True
 packages = trojanzoo_sphinx_theme
 install_requires =
-  sphinx
+  sphinx>=7.0.0
   docutils
   sphinxcontrib-jquery
 python_requires = >3
