--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,8 @@ jobs:
     environment:
       name: pypi
       url: https://pypi.org/p/trojanzoo_sphinx_theme
+    permissions:
+      id-token: write
     steps:
       - name: Checkout
         uses: actions/checkout@v3
